--- a/package.json
+++ b/package.json
@@ -3,19 +3,27 @@
   "version": "1.0.7",
   "description": "this id a designer in rpaV2",
   "main": "main.js",
+  "binary": {
+    "module_name": "ACF",
+    "module_path": "./lib/binding/",
+    "remote_path": "./v{version}/",
+    "package_name": "{module_name}-v{version}-{node_abi}-{platform}-{arch}-{libc}.tar.gz",
+    "host": "https://192.168.3.200/"
+  },
   "scripts": {
     "start": "electron .",
     "startpack": "webpack && electron .",
     "webapckgo": "webpack",
-    "packager": "electron-packager ./ robot-designer --w --out ./OutApp --version 1.8.7 --platform=win32 --arch=x64 --icon=./app/img/icon.ico --overwrite --ignore=node_modules/electron-* --ignore=node_modules/.bin --ignore=.git --ignore=OutApp --ignore=app/main/debuger/monitor.js --ignore=app/main/debuger/Scalable/main.js",
-    "packager-w32": "electron-packager ./ robot-designer-w32 --w --out ./OutApp --version 1.8.7 --platform=win32 --arch=ia32 --icon=./app/img/icon.ico --overwrite --ignore=node_modules/electron-* --ignore=node_modules/.bin --ignore=.git --ignore=OutApp --ignore=app/main/debuger/monitor.js --ignore=app/main/debuger/Scalable/main.js",
+    "packager": "electron-packager ./ robot-designer --w --out ./OutApp --version 18.3.15 --platform=win32 --arch=x64 --icon=./app/img/icon.ico --overwrite --ignore=node_modules/electron-* --ignore=node_modules/.bin --ignore=.git --ignore=OutApp --ignore=app/main/debuger/monitor.js --ignore=app/main/debuger/Scalable/main.js",
+    "packager-w32": "electron-packager ./ robot-designer-w32 --w --out ./OutApp --version 18.3.15 --platform=win32 --arch=ia32 --icon=./app/img/icon.ico --overwrite --ignore=node_modules/electron-* --ignore=node_modules/.bin --ignore=.git --ignore=OutApp --ignore=app/main/debuger/monitor.js --ignore=app/main/debuger/Scalable/main.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "electron-rebuild": "electron-rebuild -w sqlite3 -a x64"
+    "electron-rebuild": "electron-rebuild -w sqlite3 -a x64 --abi=72",
+    "rebuild": "npm rebuild --runtime=electron --target=18.3.15 --disturl=https://atom.io/download/atom-shell --abi=72"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^1.8.4",
+    "electron": "^18.3.15",
     "electron-packager": "^11.2.0",
     "electron-rebuild": "^1.7.3",
     "extract-text-webpack-plugin": "^3.0.2",
@@ -28,7 +36,7 @@
     "webpack-target-electron-renderer": "^0.4.0"
   },
   "dependencies": {
-    "adm-zip": "^0.4.9",
+    "adm-zip": "^0.4.16",
     "archiver": "^2.1.1",
     "async": "^2.6.0",
     "axios": "^0.18.0",
@@ -59,28 +67,27 @@
     "node-csv": "^0.1.2",
     "node-pre-gyp": "^0.10.3",
     "node-tesseract": "^0.2.7",
-    "nodejieba": "^2.2.6",
+    "nodejieba": "2.4.2",
     "nodemailer": "^4.4.1",
     "nodemailer-smtp-transport": "^2.7.4",
     "npm": "^5.8.0",
     "nzh": "^1.0.3",
     "officegen": "^0.4.5",
-    "opencv4nodejs": "4.5.0",
-    "oracledb": "^2.1.2",
+    "oracledb": "^4.2.0",
     "pdf2json": "^1.1.7",
     "python-shell": "^2.0.1",
     "regedit": "^3.0.0",
     "request": "^2.88.0",
-    "robotjs": "^0.4.7",
+    "robotjs": "^0.6.0",
     "screenshot-desktop": "^1.4.2",
     "selenium-webdriver": "^4.0.0-alpha.1",
     "sequelize": "^4.38.0",
     "silly-datetime": "^0.1.2",
     "socket.io": "^2.0.4",
-    "sqlite3": "^3.1.13",
+    "sqlite3": "^4.2.0",
     "telnet-client": "^0.15.8",
     "tempfile": "^2.0.0",
-    "webworker-threads": "^0.7.13",
+    "web-worker": "^1.2.0",
     "xlsx": "^0.11.19",
     "xpath-to-css": "^1.0.2"
   }
