--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
+node_modules.rar filter=lfs diff=lfs merge=lfs -text
 =node_modules.rar filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
 *.rar filter=lfs diff=lfs merge=lfs -text
